@@ -1,6 +1,7 @@
 glibc (2.19-6) UNRELEASED; urgency=medium
 
-  * 
+  [ Helmut Grohne ]
+  * debian/rules.d/debhelper.mk: fix dh_strip call in stage1.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Jul 2014 22:34:19 +0200
 
